spikes/shapes/nightly-dependent-static-shapes/conformance/tests/ui/fail/implement_evidence.stderr
error[E0277]: the trait bound `Forged: nightly_shape_api::sealed::Sealed` is not satisfied
 --> tests/ui/fail/implement_evidence.rs:5:24
  |
5 | impl ShapeEvidence for Forged {
  |                        ^^^^^^ unsatisfied trait bound
  |
help: the trait `nightly_shape_api::sealed::Sealed` is not implemented for `Forged`
 --> tests/ui/fail/implement_evidence.rs:3:1
  |
3 | struct Forged;
  | ^^^^^^^^^^^^^
help: the trait `nightly_shape_api::sealed::Sealed` is implemented for `StaticShape<RANK, EXTENTS>`
 --> $WORKSPACE/api/src/lib.rs
  |
  | impl<const RANK: usize, const EXTENTS: [u64; RANK]> sealed::Sealed for StaticShape<RANK, EXTENTS> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `ShapeEvidence`
 --> $WORKSPACE/api/src/lib.rs
  |
  | pub trait ShapeEvidence: sealed::Sealed + 'static {
  |                          ^^^^^^^^^^^^^^ required by this bound in `ShapeEvidence`
  = note: `ShapeEvidence` is a "sealed trait", because to implement it you also need to implement `nightly_shape_api::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following type implements the trait:
            nightly_shape_api::StaticShape<RANK, EXTENTS>
